# stella-launcher

./: .gitignore  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-launcher.yml
scripts/: open-dev-app.mjs  stamp-version.mjs
src/: App.tsx  index.css  index.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  commands.rs  disk.rs  main.rs  protected_storage.rs  setup.rs  shell.rs  state.rs
