[package]
name = "stella-launcher"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "Stella"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
dirs = "6"
fs2 = "0.4"
open = "5"
regex-lite = "0.1"
tar = "0.4"
zstd = "0.13"
futures-util = "0.3"
sha2 = "0.11.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
